Setting fixed width and height for wrap.

--- a/css/base.css
+++ b/css/base.css
@@ -12,6 +12,8 @@ body {
 	background: #D1C496;*/
 	color: #f5f3e5;
 	text-align: center;
+	width: 1200px;
+	height: 500px;
 }
 
 #wrap {
